--- a/Final Project Proposal.ipynb
+++ b/Final Project Proposal.ipynb
@@ -87,10 +87,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Is there a correlation between the use of guns and demographics of the users involved?\n",
-    "- Does geography play a role with the number of incidents?\n",
-    "- Do state gun laws have an impact on gun violence? \n",
-    "- Does gun ownership impact gun violence incidents?"
+    "- Is there a correlation between the use of guns and demographics of the users involved? \n",
+    "- Is there a statistical significance in gun related crimes between red and blue states?\n",
+    "- Is the gun ownership rate on a state level associated with lower rates of any kind of crime?"
    ]
   },
   {
@@ -106,8 +105,10 @@
    "source": [
     "For data cleaning and pre-processing, [pandas](https://pandas.pydata.org/) and [numpy](https://numpy.org/) python libraries will be used.\n",
     "\n",
-    "To answer the research questions listed above, a combination of Exploratory Data Analysis and Statistical Analysis to check for correlation will be carried out.\n",
-    "For EDA, [matplotlib](https://matplotlib.org/) and [seaborn](https://seaborn.pydata.org/) python libraries will be used."
+    "To answer the first question, a combination of Exploratory Data Analysis and Statistical Analysis to check for correlation will be carried out.\n",
+    "For EDA, [matplotlib](https://matplotlib.org/) and [seaborn](https://seaborn.pydata.org/) python libraries will be used.\n",
+    "\n",
+    "For the second and third research question, a combination of hypothesis testing with t-tests and ANOVA tests will be carried out."
    ]
   },
   {
