--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -5880,7 +5880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Republican States in 2014 and 2015 as well as Democratic states in 2016 do have a significant effect on the total number of incidents.**"
+    "**Political Party Affiliation does not seem to have a significant effect on the number of incidents per capita.**"
    ]
   },
   {
@@ -7587,6 +7587,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**States with Open Carry not allowed do have a significant effect on the number of incidents per capita.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a name=\"strict\"/>\n",
     "\n",
     "### Strict vs Lax Gun Laws"
@@ -7942,9 +7949,10 @@
     "\n",
     "We can also see that the number of incidents over years have been rising at an alarming rate, with 2017 having over 6000 such incidents. District of Columbia and Alaska have the highest number of such incidents every year.\n",
     "\n",
-    "Looking at the political party affiliations of each state from 2013-2017, we can see that they do have a significant impact on the number of incidents that occur every year.\n",
+    "Looking at the political party affiliations of each state from 2013-2017, we can see that they do not have a significant impact on the number of incidents that occur every year.\n",
     "\n",
-    "Most states require a permit to carry firearms, and open carry is allowed in 42 states. However, most states do not require firearms to be registered, and do not require a permit to purchase firearms. Background checks is not required in over half the states. Looking at the relationship between these different gun laws and the total number of incidents, we see that states that allow open carry see a slightly lower incident rate per capita. There are also a higher number of states with lax gun laws, compared to states with strict gun laws. However, in states like Delaware and District of Columbia, which have strict gun laws, we see a high incident rate per capita. \n",
+    "Most states require a permit to carry firearms, and open carry is allowed in 42 states. However, most states do not require firearms to be registered, and do not require a permit to purchase firearms. Background checks is not required in over half the states. Looking at the relationship between these different gun laws and the total number of incidents, we see that states that allow open carry see a slightly lower incident rate per capita. States with open carry not allowed do have a significant effect on the number of incidents per capita.\n",
+    "There are also a higher number of states with lax gun laws, compared to states with strict gun laws. However, in states like Delaware and District of Columbia, which have strict gun laws, we see a high incident rate per capita. \n",
     "States like Alabama and Tennessee, which have lax strict laws see a higher incident rate per capita compared to other states with lax gun laws.\n"
    ]
   },
